# rak

./: .cirrus.yml  Cargo.toml  README.md  build.rs  cloudbuild.yaml  go.mod  hello.go  layout.ld  x86_64-none-rak.json  x86_64-none-uk.json
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  paging.rs  serial.rs  tables.rs  util.rs  vga.rs
src/io/: mod.rs  pic8259.rs  ps2.rs  serial.rs  vga.rs
tests/: hosted.rs  qemu.rs
