[package]
name = "rak"
version = "0.1.0"
authors = ["Joe Richey <joerichey94@gmail.com>"]
edition = "2018"

[dependencies]
slab_allocator = "0.3.5"
bit_field = "0.9.0"
bitflags = "1.0.4"
bootloader = { git = "https://github.com/josephlr/bootloader", branch = "test" }
lazy_static = {version = "1.0", features = ["spin_no_std"] }
spin = "0.4.6"
volatile = "0.2.3"
x86_64 = "0.2.11"

[dev-dependencies]
array-init = "0.0.4"

[profile]
dev = { panic = "abort" }
release = { panic = "abort", debug = false }

[package.metadata.bootimage]
default-target = "x86_64-rak.json"
