[package]
name = "uk"
version = "0.1.0"
authors = ["Joe Richey <joerichey@google.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 's'
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
getrandom = { version = "0.2", features = ["rdrand"] }
uart_16550 = "0.2.7"
x86_64 = { path = "../x86_64" }
bitflags = "1.2"